--- a/ACID/ACID.csproj
+++ b/ACID/ACID.csproj
@@ -124,6 +124,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="ProgressBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TotalSumForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TotalSumForm.Designer.cs">
+      <DependentUpon>TotalSumForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Authentication.resx">
       <DependentUpon>Authentication.cs</DependentUpon>
     </EmbeddedResource>
