Added Feature to Cancel Order

--- a/ACID/ACID.csproj
+++ b/ACID/ACID.csproj
@@ -137,6 +137,12 @@
       <DependentUpon>MenuForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Order.cs" />
+    <Compile Include="OrderCancelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OrderCancelForm.Designer.cs">
+      <DependentUpon>OrderCancelForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProgressBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -163,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OrderCancelForm.resx">
+      <DependentUpon>OrderCancelForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
